--- a/package.json
+++ b/package.json
@@ -9,8 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.2",
+    "bootstrap": "^5.3.2",
+    "bufferutil": "^4.0.8",
+    "next": "^14.0.3",
+    "noty": "^3.2.0-beta-deprecated",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.3"
+    "react-modal": "^3.16.1",
+    "react-modal-image": "^2.6.0",
+    "react-notifications": "^1.7.4",
+    "react-responsive-carousel": "^3.2.23",
+    "react-toastify": "^9.1.3",
+    "react-zoom-pan-pinch": "^3.3.0",
+    "reactstrap": "^9.2.1",
+    "socket.io-client": "^4.7.2",
+    "supports-color": "^9.4.0",
+    "swiper": "^11.0.5",
+    "utf-8-validate": "^5.0.10"
   }
 }
