--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "start:dev": "cross-env NODE_ENV=development next dev",
+    "start:prod": "cross-env NODE_ENV=production next start"
   },
   "dependencies": {
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "bufferutil": "^4.0.8",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.3.1",
     "next": "^14.0.3",
     "noty": "^3.2.0-beta-deprecated",
     "react": "^18",
